--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.1.3
+    - Python 3 support via six and cleaned-up tests
+
 0.1.2
     - Unexpected data types now raise TypeError when encoding
 
